# homophonic-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: pentagrams.txt  tetragrams.txt  trigrams.txt
src/: .language_data.cpp.swp  key.cpp  key.h  language_data.cpp  language_data.h  main.cpp  message.cpp  message.h  solver.cpp  solver.h
src/test/: tests.cpp
